syntax = "proto3";

package api.data_processing.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "ecommerce/api/data_processing/v1;v1";

// DataProcessing 数据处理服务定义了所有与数据处理相关的RPC接口。
service DataProcessing {
  // --- 核心数据处理接口 ---

  // ProcessData 处理数据。
  rpc ProcessData(ProcessDataRequest) returns (ProcessDataResponse);
  // GetProcessingStatus 获取数据处理状态。
  rpc GetProcessingStatus(GetProcessingStatusRequest) returns (ProcessingStatusResponse);
}

// --- 消息定义 ---

// ProcessDataRequest 数据处理请求消息。
message ProcessDataRequest {
  string data_id = 1;
  string processing_type = 2;
  map<string, string> processing_params = 3;
}

// ProcessDataResponse 数据处理响应消息。
message ProcessDataResponse {
  string processing_id = 1;
  string status = 2;
}

// GetProcessingStatusRequest 获取数据处理状态请求消息。
message GetProcessingStatusRequest {
  string processing_id = 1;
}

// ProcessingStatusResponse 数据处理状态响应消息。
message ProcessingStatusResponse {
  string processing_id = 1;
  string status = 2;
  optional string result_data_url = 3;
  google.protobuf.Timestamp started_at = 4;
  optional google.protobuf.Timestamp completed_at = 5;
}